Thu Jan  6 05:14:41 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (get_strio, strio_set_string)
	  (strio_reopen): check if frozen.  [ruby-core:33648]

Wed Jan  5 13:56:54 2011  Akinori MUSHA  <knu@iDaemons.org>

	* lib/net/http.rb (Net::HTTP#get): A header hash given should not
	  be modified.

Sun Jan  9 16:31:34 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/locale.rb (IRB::Locale::LOCALE_NAME_RE): 
	  some platoform has a locale without territory but with 
	  encoding.
	  (#each_sub_locale): ditto.

Sat Jan  1 17:02:50 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/locale.rb (IRB::Locale#search_file): make it possible
	  to load a localization from a gem.
	  (IRB::Locale#lc_path): obsoleted because of the change of #search_file
	  (IRB::Locale#each_localized_path): new private method, based on lc_path
	  (IRB::Locale#find): follows the change of #search_file.
	  (IRB::Locale#load): removed duplicate with #find.

Fri Dec 31 03:23:26 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* vsnprintf.c (BSD__uqtoa): Fix overflow when long != quad_t.
	  patched by Peter Weldon <peter.weldon AT null.net>
	  [ruby-core:33985]

Wed Jan  5 12:10:08 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* Use _WIN32 rather than checking for windows.h.  Thanks Jon Forums!
	  [ruby-core:33977]

Tue Dec 28 04:32:37 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/extconf.rb: check for windows.h while building fiddle.
	  Thanks Jon Forums! [ruby-core:33923]

Sun Dec 26 11:39:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stmt): missing ripper rule.  i.e., `a::B ||= c 1'.
	  http://twitter.com/#!/wannabe53/status/18797576396472321
	  http://twitter.com/#!/wannabe53/status/18798416150663168

Sun Dec 26 04:31:15 2010  Luis Lavena  <luislavena@gmail.com>

	* ext/dl/win32/registry.rb: Corrected RegCreateKeyExA signature.
	  Patch by Rafal Michalski [ruby-core:33874] [Ruby 1.9-Bug#4203]
